src/test/deca/context/invalid/avecObjet/class_cycle_indirect_3.deca
// Description :
//    Cycle d'héritage indirect entre trois classes.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : Classe B déjà déclarée

class B {}

class C {}

class A extends B {
}

class B extends C {
}

class C extends A {
}

{
}

